1-infosys-web-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-v1
  namespace: test100
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      version: v1
  template:
    metadata:
      labels:
        app: web
        version: v1
    spec:
      containers:
        - name: apache1
          image: quay.io/anandpavithran/infosys:1.0
          ports:
            - containerPort: 8080
